unification of projects URL method get
